# sop_llm

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  REFACTORING_PLAN.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.docker/: INDEX.md  MIGRATION.md  OVERVIEW.md  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.infra.yml  docker-compose.local.yml
.docker/configs/: .env.dev  .env.host  .env.local  .env.prod
.docker/containers/app/: Dockerfile  entrypoint.sh
.docker/containers/backend/: Dockerfile
.docker/containers/langfuse/: docker-compose.yml
.docker/dockerfiles/backend/: Dockerfile
.docker/redis/: redis.conf
config/: .pre-commit-config.yaml  __init__.py  embeddings.yaml  models.yaml  providers.yaml  settings.py
config/model_presets/: cloud_models.yaml  embedding_models.yaml  local_models.yaml
docs/: API.md  DEPLOYMENT.md  configuration.md  conversations.md  docker.md  model-presets.md  testing.md
scripts/: healthcheck.sh  restart.sh
src/: __init__.py  app.py  config.py  main.py
src/adapters/: __init__.py  intake_adapter.py
src/api/: __init__.py  schemas.py
src/api/docs/: __init__.py  models.py  monitor.py  tasks.py  websocket.py
src/api/routes/: __init__.py  conversations.py  embeddings.py  models.py  monitor.py  tasks.py  websocket.py
src/api/schemas/: __init__.py  requests.py  responses.py
src/api/v1/: __init__.py  health.py  models.py  router.py  similarity.py  tasks.py
src/core/: README.md  __init__.py  config.py  constants.py  dependencies.py  enums.py  model_defaults.py  model_presets.py
src/docs/: __init__.py  conversations.py  embeddings.py  models.py  tasks.py
src/engine/: __init__.py  gpu_guard.py  vram_monitor.py
src/modules/llm/: __init__.py
src/modules/llm/formatters/: __init__.py  base.py  json_parser.py
src/modules/llm/providers/: __init__.py  base.py  claude_provider_new.py  factory.py  lm_studio_provider.py  local_provider.py
src/modules/llm/schemas/: __init__.py
src/modules/llm/services/: __init__.py  embedding_manager.py  json_fixer.py  llm_manager.py  provider_manager.py  unified_llm.py
src/modules/monitoring/: __init__.py
src/modules/monitoring/api/: __init__.py  websocket.py
src/modules/monitoring/services/: __init__.py  statistics.py
src/providers/: __init__.py  anthropic.py  base.py  embedding.py  litellm_provider.py  local.py  openai.py  openai_compatible.py  registry.py
src/services/: __init__.py  conversation_store.py  embedding_manager.py  observability.py  prompt_service.py  session_store.py  task_processor.py
src/services/model_presets/: __init__.py  compatibility.py  downloader.py  loader.py
src/services/observability/: README.md  __init__.py  client.py  context.py  decorators.py  integrations.py  logging_helpers.py  utils.py
src/services/task/: __init__.py  task_executor.py  task_orchestrator.py  task_state_manager.py  webhook_service.py
src/shared/: __init__.py
src/shared/cache/: __init__.py  redis_cache.py
src/shared/errors/: README.md  __init__.py  base.py  context.py  decorators.py  domain_errors.py  examples.py  handlers.py  llm_errors.py  mapping.py  schemas.py
src/shared/logging/: USAGE.md  __init__.py  config.py  formatters.py  helpers.py  patchers.py
src/shared/utils/: __init__.py  model_loader.py
src/tests/: README.md  conftest.py  test_api_providers.py  test_json_fixer.py  test_provider_architecture.py  test_real_integration.py  test_sop_integration.py
src/tests/integration/: test_api_integration.py  test_conversations_api.py  test_local_model_e2e.py
src/tests/unit/: __init__.py  conftest.py  test_api_schemas.py  test_app_endpoints.py  test_config.py  test_conversation_store.py  test_gpu_components.py  test_logging.py  test_provider_registry.py  test_providers_base.py  test_session_store.py  test_task_processor.py
src/tests/unit/api/: test_embeddings.py  test_models.py
src/tests/unit/providers/: test_litellm_provider.py  test_registry.py
src/tests/unit/services/: test_embedding_manager.py
src/tests/unit/shared/errors/: test_base.py  test_domain_errors.py  test_llm_errors.py  test_mapping.py
src/utils/: __init__.py  logging.py
