[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sop-llm"
version = "1.0.0"
description = "SOP LLM Service - Асинхронный сервис для работы с LLM моделями"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Vladislav", email = "vladislav@example.com"}
]

dependencies = [
    # Веб-фреймворк
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=21.2.0",

    # Валидация данных
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",

    # Кэш и очереди
    "redis[hiredis]>=5.2.0",
    "faststream[redis]>=0.5.28",

    # ML/AI библиотеки (для локальных embeddings)
    "sentence-transformers>=3.2.1",  # Локальные embeddings
    "torch>=2.5.1",                   # Требуется для sentence-transformers
    "safetensors>=0.4.5",             # Безопасная загрузка моделей

    # LLM Inference (NEW ARCHITECTURE - PRODUCTION)
    "litellm>=1.80.0",           # Unified LLM interface for 100+ providers
    "anthropic>=0.42.0",         # Claude API (used by LiteLLM)
    "openai>=1.60.0",            # OpenAI API (used by LiteLLM)

    # LLM Observability & Tracing
    "langfuse>=2.51.0,<3.0.0",   # LLM observability platform (v2, compatible with litellm)
    "opentelemetry-api>=1.28.0", # Distributed tracing
    "opentelemetry-sdk>=1.28.0", # Tracing SDK
    "prometheus-fastapi-instrumentator>=7.0.0",  # Prometheus metrics

    # GPU Monitoring
    "pynvml>=12.560.30",         # NVIDIA GPU monitoring

    # HTTP клиенты
    "httpx>=0.27.2",             # Async HTTP для remote providers
    "aiohttp>=3.11.2",

    # Утилиты
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "numpy>=2.1.3",
    "psutil>=6.1.0",
    "jinja2>=3.1.4",  # Prompt templating
    "huggingface-hub>=0.20.0",  # HuggingFace model downloads

    # Производительность
    "orjson>=3.10.11",
    "xxhash>=3.5.0",

    # Логирование
    "loguru>=0.7.2",
    "python-json-logger>=3.1.0",
]

[project.optional-dependencies]
dev = [
    # Тестирование
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "faker>=22.0.0",
    "asgi-lifespan>=2.1.0",

    # Качество кода
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "pyright>=1.1.390",

    # Отладка
    "ipython>=8.0",
    "ipdb>=0.13",
]

local = [
    "llama-cpp-python>=0.3.2",  # Local GGUF models with GPU support
]

quantization = [
    "bitsandbytes>=0.44.1",  # Требует CUDA
]

[project.urls]
Homepage = "https://github.com/vladislav/sop_llm"
Repository = "https://github.com/vladislav/sop_llm"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
cache-dir = ".ruff_cache"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "models",
    "logs",
    "data",
]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "D1",       # Missing docstrings (разрешено)
    "D401",     # Imperative mood (стилистика)
    "ANN001",   # Missing type annotation for argument
    "ANN002",   # Missing type annotation for *args
    "ANN003",   # Missing type annotation for **kwargs
    "ANN201",   # Missing return type annotation
    "ANN202",   # Missing return type annotation for private function
    "ANN401",   # Dynamically typed expressions (Any)
    "S101",     # Use of assert detected
    "S104",     # Binding to all interfaces (0.0.0.0 нормально для сервера)
    "S701",     # Jinja2 autoescape=False (для промптов это нормально)
    "FBT001",   # Boolean-typed positional argument
    "FBT002",   # Boolean default positional argument
    "RUF001",   # Ambiguous unicode (кириллица)
    "RUF002",   # Ambiguous unicode in docstring (кириллица)
    "RUF003",   # Ambiguous unicode in comment (кириллица)
    "RUF012",   # Mutable class default (валидно для маппингов)
    "E501",     # Line too long (120 вместо 88)
    "COM812",   # Missing trailing comma
    "ISC001",   # Implicit string concatenation
    "T201",     # Print found (разрешено для отладки)
    "EM101",    # Exception must not use string literal
    "TRY003",   # Avoid specifying long messages outside exception class
    "TRY300",   # Consider moving to else block (опционально)
    "TRY301",   # Abstract raise to inner function
    "PLR0913",  # Too many arguments
    "PLR0915",  # Too many statements (нормально для startup)
    "PLR2004",  # Magic value in comparison
    "PLC0415",  # Import outside top-level (для circular imports)
    "PLW0603",  # Global statements (нормально для синглтонов)
    "ASYNC109", # Timeout parameters (валидный паттерн)
    "G004",     # f-strings в логах (нормально для structured logging)
    "ERA001",   # Commented code (много ложных срабатываний)
    "SIM113",   # Use enumerate (не всегда применимо)
    "PT011",    # pytest.raises too broad (разрешено в тестах)
    "ARG001",   # Unused function argument (разрешено для интерфейсов)
    "ARG002",   # Unused method argument (разрешено для mock)
    "BLE001",   # Blind except Exception
    "SLF001",   # Private member access (в тестах допустимо)
    "DTZ",      # Datetime without timezone (используем UTC по умолчанию)
    "A001",     # Variable shadows builtin (TimeoutError и др.)
    "C901",     # Complex function (нормально для некоторых функций)
    "PERF",     # Performance hints (опционально)
]

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-local-folder = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/**/*.py" = ["S101", "S105", "S106", "ANN", "D", "PLC0415", "PT017", "ARG001", "ARG005", "N818", "SIM", "RUF012"]  # test-specific ignores
"src/tests/**/*.py" = ["S101", "S105", "S106", "ANN", "D", "PLC0415", "PT017", "ARG001", "ARG005", "A004", "A001", "DTZ", "N818", "SIM", "RUF012", "INP001", "PERF", "C901", "S701"]  # test-specific ignores
"src/shared/errors/__init__.py" = ["A004"]  # Shadowing builtins для custom exceptions
"src/shared/errors/base.py" = ["N818"]  # AppException - базовый класс
"src/shared/errors/examples.py" = ["PT017"]  # Examples - демонстрационный код
"src/shared/errors/mapping.py" = ["A004"]  # TimeoutError shadowing

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "torch.*",
    "redis.*",
    "faststream.*",
    "anthropic.*",
    "llama_cpp.*",
    "litellm.*",
    "langfuse.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["src/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

markers = [
    "unit: Unit tests (fast, isolated, use mocks)",
    "system: System tests (real components like Redis)",
    "api: API tests (HTTP endpoints)",
    "integration: Integration tests",
    "slow: Slow running tests (> 1s)",
    "requires_redis: Tests requiring Redis",
    "requires_gpu: Tests requiring GPU",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
